# garagem_aula

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/garagem/: admin.py
core/garagem/models/: acessorio.py  cor.py
core/garagem/serializers/: acessorio.py  categoria.py  cor.py  marca.py
core/garagem/views/: acessorio.py  categoria.py  cor.py  marca.py
core/usuario/: admin.py  managers.py  models.py  router.py  views.py
core/usuario/migrations/: 0001_initial.py  0002_remove_usuario_cpf_remove_usuario_data_nascimento_and_more.py
garagem/migrations/: 0001_initial.py
garagem/models/: __init__.py  acessorio.py  marca.py
garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py
garagem/views/: __init__.py
